feat(api): wire quizzes
